--- a/home.html
+++ b/home.html
@@ -37,6 +37,30 @@
             </div>
         </div>
     </section>
+
+    <!-- card section  -->
+    <section class="container mx-auto">
+        <div class="flex mt-5 justify-center gap-5">
+            <div class="bg-[url('./image/first.webp')] bg-cover h-80 w-[550px] flex items-end rounded-xl">
+                <div class="space-y-2 p-3">
+                    <h1 class="font-bold text-lg">Storyboard Your Ideas with AI</h1>
+                    <p>Instantly turn your script or idea into a visual storyboard powered by AI. Perfect for
+                        pre-production planning.</p>
+                    <button class="btn btn-outline border-none bg-black hover:bg-white">Create Storyboard</button>
+                </div>
+            </div>
+            <div class="bg-[url('./image/sec.webp')] bg-cover h-80 w-[550px] flex items-end rounded-xl">
+                <div class="space-y-2 p-3">
+                    <h1 class="font-bold text-lg">One-Click AI Movie Maker</h1>
+                    <p>Create cinematic-quality video scenes in seconds with intelligent automation and stunning
+                        visuals.</p>
+                    <button class="btn btn-outline border-none bg-black hover:bg-white">Start Creating</button>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 
 </html>
