second card section

--- a/home.html
+++ b/home.html
@@ -58,7 +58,30 @@
                 </div>
             </div>
         </div>
-
+        <!-- second card section  -->
+        <div class="flex mt-5 justify-center gap-5">
+            <div class="bg-[url('./image/aishorts.webp')] bg-cover bg-center h-72 w-[360px] flex items-end rounded-xl">
+                <div class="space-y-2 p-3">
+                    <h1 class="font-bold text-lg">AI Reels & Shorts Creator</h1>
+                    <p>Produce engaging short-form videos using AI-powered editing and transitions.</p>
+                    <button class="btn btn-outline border-none bg-black hover:bg-white">Create Now</button>
+                </div>
+            </div>
+            <div class="bg-[url('./image/th.webp')] bg-cover bg-center h-72 w-[360px] flex items-end rounded-xl">
+                <div class="space-y-2 p-3">
+                    <h1 class="font-bold text-lg">Instant AI Ad Creator</h1>
+                    <p>Generate high-converting, professional-grade video ads with cutting-edge AI.</p>
+                    <button class="btn btn-outline border-none bg-black hover:bg-white">Create Now</button>
+                </div>
+            </div>
+            <div class="bg-[url('./image/vi.png')] bg-cover bg-center h-72 w-[360px] flex items-end rounded-xl">
+                <div class="space-y-2 p-3">
+                    <h1 class="font-bold text-lg">AI Product Scene Generator</h1>
+                    <p>Create cinematic product visuals AI generation .</p>
+                    <button class="btn btn-outline border-none bg-black hover:bg-white">Create Now</button>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
