done home section

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     </section>
 
     <!-- card section  -->
-    <section class="container mx-auto">
+    <section class="container mx-auto mb-14">
         <div class="flex mt-5 justify-center gap-5">
             <div class="bg-[url('./image/first.webp')] bg-cover h-80 w-[550px] flex items-end rounded-xl">
                 <div class="space-y-2 p-3">
