--- a/AI Film/ai film.html
+++ b/AI Film/ai film.html
@@ -23,7 +23,8 @@
 
         <!-- Dropdown container -->
         <div class="flex justify-center gap-4 mt-24">
-            <div class="border border-gray-800 p-1 w-40 flex justify-center rounded-lg hover:bg-gray-900">
+            <div
+                class="border border-gray-800 p-1 w-40 h-12 flex justify-center items-center rounded-lg hover:bg-gray-900">
                 <div>
                     <a href="">
                         <h1 class="flex items-center gap-2">
@@ -32,15 +33,21 @@
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="m15.75 10.5 4.72-4.72a.75.75 0 0 1 1.28.53v11.38a.75.75 0 0 1-1.28.53l-4.72-4.72M4.5 18.75h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25h-9A2.25 2.25 0 0 0 2.25 7.5v9a2.25 2.25 0 0 0 2.25 2.25Z" />
                             </svg>
+
                             Short Film
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-5">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+
                         </h1>
                     </a>
                 </div>
             </div>
-            <div class="border gap-2 border-gray-800 p-1 w-full max-w-32 flex rounded-lg">
+            <div class="border gap-2 border-gray-800 p-1 w-40 flex items-center rounded-lg">
                 <div class="flex bg-gray-800 rounded-r-2xl">
                     <a href="">
-                        <h1 class="flex items-center gap-1">
+                        <h1 class="flex items-center ml-2 gap-1">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-5">
                                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -52,13 +59,13 @@
                 </div>
                 <div class="hover:bg-gray-700 rounded-s-2xl">
                     <a href="">
-                        <h1 class="flex items-center gap-1">
+                        <h1 class="flex items-center ml-3 gap-1">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                                 stroke="currentColor" class="size-5">
                                 <path stroke-linecap="round" stroke-linejoin="round"
                                     d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
                             </svg>
-                            16:9
+                            9:16
                         </h1>
                     </a>
                 </div>
