--- a/AI Film/ai film.html
+++ b/AI Film/ai film.html
@@ -44,8 +44,8 @@
                     </a>
                 </div>
             </div>
-            <div class="border gap-2 border-gray-800 p-1 w-40 flex items-center rounded-lg">
-                <div class="flex bg-gray-800 rounded-r-2xl">
+            <div class="border gap-2 border-gray-800 w-44 flex items-center rounded-lg">
+                <div class="flex bg-gray-800 rounded-r-2xl p-2">
                     <a href="">
                         <h1 class="flex items-center ml-2 gap-1">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -57,7 +57,7 @@
                         </h1>
                     </a>
                 </div>
-                <div class="hover:bg-gray-700 rounded-s-2xl">
+                <div class="hover:bg-gray-700 rounded-s-2xl p-2">
                     <a href="">
                         <h1 class="flex items-center ml-3 gap-1">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -70,6 +70,125 @@
                     </a>
                 </div>
             </div>
+
+
+
+            <div class="flex justify-center items-center gap-3 border border-gray-800 h-12 rounded-lg w-40">
+                <h1 class="flex items-center gap-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-4">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M6 20.25h12m-7.5-3v3m3-3v3m-10.125-3h17.25c.621 0 1.125-.504 1.125-1.125V4.875c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125Z" />
+                    </svg>
+
+                    480p
+                </h1>
+                <div>
+                    <h1 class="flex items-center gap-1 p-3 rounded-s-lg hover:bg-gray-800">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M6 20.25h12m-7.5-3v3m3-3v3m-10.125-3h17.25c.621 0 1.125-.504 1.125-1.125V4.875c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125Z" />
+                        </svg>
+
+                        480p
+                    </h1>
+                </div>
+            </div>
+
+            <div
+                class="border border-gray-800 p-1 w-40 h-12 flex justify-center items-center rounded-lg hover:bg-gray-900">
+                <div>
+                    <a href="">
+                        <h1 class="flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M6.429 9.75 2.25 12l4.179 2.25m0-4.5 5.571 3 5.571-3m-11.142 0L2.25 7.5 12 2.25l9.75 5.25-4.179 2.25m0 0L21.75 12l-4.179 2.25m0 0 4.179 2.25L12 21.75 2.25 16.5l4.179-2.25m11.142 0-5.571 3-5.571-3" />
+                            </svg>
+
+
+                            3D Pixar
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-5">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+
+                        </h1>
+                    </a>
+                </div>
+            </div>
+            <div
+                class="border border-gray-800 p-1 w-40 h-12 flex justify-center items-center rounded-lg hover:bg-gray-900">
+                <div>
+                    <a href="">
+                        <h1 class="flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="m15.75 10.5 4.72-4.72a.75.75 0 0 1 1.28.53v11.38a.75.75 0 0 1-1.28.53l-4.72-4.72M4.5 18.75h9a2.25 2.25 0 0 0 2.25-2.25v-9a2.25 2.25 0 0 0-2.25-2.25h-9A2.25 2.25 0 0 0 2.25 7.5v9a2.25 2.25 0 0 0 2.25 2.25Z" />
+                            </svg>
+
+
+
+                            Duration 60s
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-5">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+
+                        </h1>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="flex justify-center mt-3 opacity-50">
+            <div
+                class="border border-gray-800 p-1 w-40 h-12 flex justify-center items-center rounded-lg hover:bg-gray-900">
+                <div>
+                    <a href="">
+                        <h1 class="flex items-center gap-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-4">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M6.429 9.75 2.25 12l4.179 2.25m0-4.5 5.571 3 5.571-3m-11.142 0L2.25 7.5 12 2.25l9.75 5.25-4.179 2.25m0 0L21.75 12l-4.179 2.25m0 0 4.179 2.25L12 21.75 2.25 16.5l4.179-2.25m11.142 0-5.571 3-5.571-3" />
+                            </svg>
+
+
+
+
+                            Episode
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-5">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+
+                        </h1>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="flex justify-center">
+            <div class=" flex w-[1000px] mt-6 rounded-lg bg-[#1d1c1c]">
+                <input
+                    class="w-full flex pb-8 pl-8 h-30 rounded-md border-none focus:outline-none focus:ring-0 focus:border-none bg-[#191919]"
+                    type="text" name="" id=""
+                    placeholder="Describe your story, or theme for a short movie or episode......">
+                <div class="w-50 pt-5 gap-1 bg-[#191919] inline-flex items-center rounded-lg">
+                    <button
+                        class="btn btn-outline bg-[#191919] hover:bg-gray-800 text-white border-none focus:outline-none focus:ring-0 focus:border-none font-bold">Isnpire
+                        me</button>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor"
+                        class="size-8 p-1 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 rounded-full">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M8.25 6.75 12 3m0 0 3.75 3.75M12 3v18" />
+                    </svg>
+                </div>
+            </div>
+
 
         </div>
     </section>
