--- a/Short_Video/short_video.html
+++ b/Short_Video/short_video.html
@@ -33,7 +33,17 @@
                     Create New Project</button>
             </div>
         </div>
-
+        <div class="border border-solid border-gray-800 h-94 rounded-lg mt-22">
+            <div class="flex flex-col items-center justify-center mt-10">
+                <img class="w-26" src="short-video.webp" alt="">
+                <h1 class="text-xl opacity-70 mt-8">You have no projects yet.</h1>
+                <p class="text-center mt-3 opacity-70">Start creating your first Short Video to bring your <br> ideas to
+                    life!</p>
+                <button
+                    class="mt-8 btn btn-secondary border-none flex items-center gap-1 px-6 rounded-lg font-semibold bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">
+                    Create New Project</button>
+            </div>
+        </div>
     </section>
 </body>
 
