--- a/Short_Video/short_video.html
+++ b/Short_Video/short_video.html
@@ -24,7 +24,7 @@
 
                     Refresh</button>
                 <button
-                    class="btn btn-secondary border-none flex items-center gap-1 px-6 rounded-lg font-semibold bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">
+                    class="transition transform hover:scale-105 hover:shadow-xl btn btn-secondary border-none flex items-center gap-1 px-6 rounded-lg font-semibold bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="size-4">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
@@ -40,7 +40,7 @@
                 <p class="text-center mt-3 opacity-70">Start creating your first Short Video to bring your <br> ideas to
                     life!</p>
                 <button
-                    class="mt-8 btn btn-secondary border-none flex items-center gap-1 px-6 rounded-lg font-semibold bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">
+                    class="transition transform hover:scale-105 hover:shadow-xl mt-8 btn btn-secondary border-none flex items-center gap-1 px-6 rounded-lg font-semibold bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">
                     Create New Project</button>
             </div>
         </div>
