--- a/product/product.html
+++ b/product/product.html
@@ -9,8 +9,57 @@
     <title>Product Ads</title>
 </head>
 
-<body>
-    
+<body class="text-white">
+    <section class="mt-28 mx-12">
+        <h1 class="font-bold text-2xl font-mono">AI Product Image & Video Generator</h1>
+        <div class="flex gap-3">
+            <div class="flex flex-1 w-[600px] h-[270px] p-6 bg-[#29292d] mt-3 items-center gap-2 rounded-2xl">
+                <div>
+                    <h1 class="font-bold text-2xl">AI Products Images</h1>
+                    <p class="font-bold opacity-75 mt-2">Generate high-quality, professional <br> product images
+                        instantly with AI.</p>
+                    <button
+                        class="btn mt-4  text-white shadow-none border-none bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">Create
+                        Now</button>
+                </div>
+                <div>
+                    <img class="w-50" src="product-image.webp" alt="">
+                </div>
+            </div>
+            <div class="flex flex-1 w-[600px] h-[270px] p-6 bg-[#29292d] mt-3 items-center gap-2 rounded-2xl">
+                <div>
+                    <h1 class="font-bold text-2xl">
+                        AI Products Video</h1>
+                    <p class="font-bold opacity-75 mt-2">Create engaging product showcase <br> videos using AI.</p>
+                    <button
+                        class="btn mt-4 text-white shadow-none border-none bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">Create
+                        Now</button>
+                </div>
+                <div>
+                    <img class="w-50" src="product-video.webp" alt="">
+                </div>
+            </div>
+            <div class="flex flex-1 w-[600px] h-[270px] p-6 bg-[#29292d] mt-3 items-center gap-2 rounded-2xl">
+                <div>
+                    <h1 class="font-bold text-2xl">AI Products With <br> Avatar</h1>
+                    <p class="font-bold opacity-75 mt-2">Bring your products to life with AI <br> avatars.</p>
+                    <button
+                        class="btn mt-4  text-white shadow-none border-none bg-gradient-to-r from-pink-600 via-purple-500 to-purple-600">Create
+                        Now</button>
+                </div>
+                <div>
+                    <img class="w-50" src="product-avatar.webp" alt="">
+                </div>
+            </div>
+        </div>
+        <h1 class="mt-5 font-bold text-2xl">My Ads</h1>
+        <div
+            class="border border-dashed border-[#44444E] py-5 gap-3 flex flex-col justify-center items-center text-center mt-7 rounded-2xl ">
+            <img class="w-20" src="signboard.webp" alt="">
+            <h1 class="text-xl">You don't have any ads created</h1>
+            <button class="btn">Create New Ads</button>
+        </div>
+    </section>
 </body>
 
 </html>
