--- a/Explore/explore.html
+++ b/Explore/explore.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-black"
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Explore</title>
+<html lang="en" class="bg-black" <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+<title>Explore</title>
 </head>
 
-<body>
+<body class="text-white mx-10">
+    <div class="flex border rounded-2xl border-gray-800 mt-25">
+        <div class="h-[250px] p-10 space-y-5">
+            <h1 class="text-5xl font-sans ">🎥 Explore More Video Ideas</h1>
+            <p class="w-[800px]">Unleash your creativity! 🌟 Discover endless inspiration — from short films and music
+                videos to
+                educational
+                explainers and animated stories. Let AI bring your wildest ideas to life effortlessly.</p>
+            <button
+                class="flex items-center gap-1 btn btn-outline btn-secondary hover:bg-gradient-to-r from-pink-500 to-purple-600">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                </svg>
 
+                Browse Templates
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-5 mt-1">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3" />
+                </svg>
+
+            </button>
+        </div>
+        <div>
+            <img class="h-70 w-screen" src="im1.png" alt="">
+        </div>
+    </div>
+    
 </body>
 
 </html>
