--- a/Explore/explore.html
+++ b/Explore/explore.html
@@ -35,7 +35,35 @@
             <img class="h-70 w-screen" src="im1.png" alt="">
         </div>
     </div>
-    
+
+    <h1 class="mt-15 text-2xl font-bold">Explore Videos Created By Other Users</h1>
+    <div class="mt-5 gap-6 grid grid-cols-5">
+        <img class="h-[450px]" src="im2.png" alt="">
+        <img src="im1.png" alt="">
+        <img class="h-[500px]" src="im3.png" alt="">
+        <img src="im4.png" alt="">
+        <img src="im5.png" alt="">
+        <img src="im2.png" alt="">
+        <img src="im1.png" alt="">
+        <img src="im3.png" alt="">
+        <img src="im4.png" alt="">
+        <img src="im5.png" alt="">
+        <img src="im2.png" alt="">
+        <img src="im1.png" alt="">
+        <img src="im3.png" alt="">
+        <img src="im4.png" alt="">
+        <img src="im5.png" alt="">
+        <img src="im2.png" alt="">
+        <img src="im1.png" alt="">
+        <img src="im3.png" alt="">
+        <img src="im4.png" alt="">
+        <img src="im5.png" alt="">
+        <img src="im2.png" alt="">
+        <img src="im1.png" alt="">
+        <img src="im3.png" alt="">
+        <img src="im4.png" alt="">
+        <img src="im5.png" alt="">
+    </div>
 </body>
 
 </html>
