--- a/Explore/explore.html
+++ b/Explore/explore.html
@@ -37,7 +37,7 @@
     </div>
 
     <h1 class="mt-15 text-2xl font-bold">Explore Videos Created By Other Users</h1>
-    <div class="mt-5 gap-6 grid grid-cols-5">
+    <div class="my-5 gap-6 grid grid-cols-5">
         <img class="h-[450px]" src="im2.png" alt="">
         <img src="im1.png" alt="">
         <img class="h-[500px]" src="im3.png" alt="">
