--- a/Pricing/pricing.html
+++ b/Pricing/pricing.html
@@ -9,7 +9,73 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="text-white">
+    <section class="container mx-auto mt-36">
+        <h1 class="text-2xl font-semibold">Pricing</h1>
+        <div class="flex mt-8 bg-[#282626] p-1 rounded-md w-fit">
+            <button
+                class="px-2 py-0 text-sm rounded-md bg-black cursor-pointer text-white font-medium focus:outline-none">
+                Subscription
+            </button>
+            <button class="px-2 py-0 rounded-md text-gray-100 opacity-80 cursor-pointer transition">
+                Credits
+            </button>
+        </div>
+
+        <!-- first card -->
+        <div class="card mt-4 h-86 w-[500px] bg-[#282626] shadow-sm">
+            <div class="p-3">
+                <div class="border-b border-gray-700">
+                    <div class="flex justify-between">
+                        <h2 class="text-xl font-bold">Free</h2>
+                        <p
+                            class="bg-pink-500 border-none flex items-center justify-center text-black w-14 font-serif h-5 rounded-md text-xs">
+                            Active</p>
+                    </div>
+                    <h1 class="text-2xl font-bold mt-4">$0</h1>
+                    <p class="text-xs opacity-80 mb-5 mt-4">Always free</p>
+                </div>
+
+                <ul class="mt-6 flex flex-col gap-2 text-xs">
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                        <span>🚫 No commercial rights</span>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                        <span>🖼️ Basic 3D cartoon image generation</span>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                        <span>🧠 Limited access to story templates</span>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                        <span>🗣️ Basic AI voiceover support</span>
+                    </li>
+                    <li>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                            fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                        <span>🎬 Generate short AI videos (up to 30 sec)</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
 </body>
 
