--- a/Pricing/pricing.html
+++ b/Pricing/pricing.html
@@ -143,6 +143,69 @@
                     </div>
                 </div>
             </div>
+
+            <!-- last card  -->
+
+            <div class="card h-96 w-[500px] bg-[#282626] shadow-sm">
+                <div class="card-body">
+                    <h1 class="text-xl font-bold">Starter Plan</h1>
+                    <p class="text-sm opacity-80">Great for casual creators who want more flexibility and creative
+                        power.</p>
+                    <h2 class="text-xl font-bold">$12.80
+
+                        Month</h2>
+                    <a class="text-xs" href="">
+                        <input type="checkbox" checked="checked" class="toggle w-8 h-5 bg-pink-700" />
+                        Billed annually
+                    </a>
+                    <ul class="mt-6 flex flex-col gap-2 text-xs">
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span>High-resolution image generation</span>
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span>Customizable style templates</span>
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span>Batch processing capabilities</span>
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span>AI-driven image enhancements</span>
+                        </li>
+                        <li>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="size-4 me-2 inline-block text-success"
+                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M5 13l4 4L19 7" />
+                            </svg>
+                            <span>Seamless cloud integration</span>
+                        </li>
+                    </ul>
+                    <div class="mt-6">
+                        <button
+                            class="btn bg-pink-500 border-none shadow-none hover:bg-pink-400 btn-block">Subscribe</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
