--- a/Profile/index.html
+++ b/Profile/index.html
@@ -12,12 +12,12 @@
 <body class="text-white">
     <section class="bg-[#141313] w-[800px] h-[650px] mt-20 ml-10 rounded-xl">
 
-        <div>
+        <div class="flex">
 
 
             <!-- first -->
             <div class="ml-5 space-y-1">
-                <h1 class="font-sans font-bold text-2xl">Account</h1>
+                <h1 class="font-sans font-bold text-2xl mt-10">Account</h1>
                 <p class="opacity-95 text-xs">Manage your account info.</p>
                 <div class="flex items-center gap-3 mt-8 cursor-pointer">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="" viewBox="0 0 24 24" stroke-width="1.5"
@@ -44,6 +44,16 @@
                             clip-rule="evenodd" />
                     </svg>
                     <span class="text-xs font-bold opacity-80">Billing</span>
+                </div>
+            </div>
+            <!-- second -->
+            <div class="mt-10 ml-20 space-y-8">
+                <h1 class="font-bold text-sm">Profile details</h1>
+                <div class="flex items-center">
+                    <h1 class="text-xs opacity-80">Profile</h1>
+                    <img class="w-20 h-20 rounded-full p-5" src="pl.jpg" alt="">
+                    <h1 class="font-bold text-sm">Plabon</h1>
+                    <h1 class="ml-65 text-[#be575f] font-bold text-xs cursor-pointer">Update Profile</h1>
                 </div>
             </div>
         </div>
